# glazewm-extra

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  postcss.config.mjs  resource.rc  rsbuild.config.ts  tsconfig.json  uno.config.ts
.github/workflows/: release.yml
app/: Cargo.toml  tauri.conf.json
app/src/: command.rs  config.rs  main.rs  menu.rs  windows.rs
assets/: glazewm-extra.json
crates/ipc/: Cargo.toml
crates/ipc/examples/: client.rs  subscribe.rs  windows.rs
crates/ipc/src/: command.rs  lib.rs  socket.rs  spawn_executor.rs  stream.rs  subscribe.rs
crates/native/: Cargo.toml
src/: config.rs  main.rs  native.ts  rules.ts  service.rs  utils.ts  windows.rs
src/daemon/: index.tsx
src/daemon/hooks/: useFocusedChange.ts
src/daemon/services/: alpha.tsx  cleanup.tsx  focus.tsx  manage.tsx  titile.tsx
src/ipc/: command.rs  command.ts  event.rs  mod.rs  stream.rs  subscribe.rs  subscribe.ts  utils.ts  websocket.rs
src/native/: mod.rs
src/network/: subscribe.ts
src/overview/: index.css  index.tsx
src/overview/components/: split-view.tsx  window-view.tsx  workspace-panel.tsx
src/tray/: mod.rs
