[package]
name = "glazewm-extra"
version = "0.1.2"
edition = "2021"
license = "MIT"
readme = "README.md"
keywords = ["glazewm"]
categories = ["command-line-utilities"]
exclude = ["assets", "examples"]
homepage = "https://github.com/ptazithos/glazewm-extra"
repository = "https://github.com/ptazithos/glazewm-extra"
description = "This repository contains additional features for the Glaze Window Manager (glazewm) based on ipc and windows api."

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
http-body-util = "0.1.2"
hyper-util = "0.1.5"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
hyper = "1.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
windows = { version = "0.57.0", features = ["Win32_UI_WindowsAndMessaging"] }
clap = { version = "4.5.8", features = ["derive"] }

[[bin]]
name = "glazewm-extra"
path = "src/main.rs"
