[package]
name = "glazewm-extra"
version = "0.1.8"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
anyhow = "1.0.86"
http-body-util = "0.1.2"
hyper-util = "0.1.5"
fastwebsockets = { version = "0.8.0", features = ["upgrade"] }
hyper = "1.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
windows = { version = "0.58.0", features = ["Win32_UI_WindowsAndMessaging"] }
clap = { version = "4.5.8", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
toml = "0.8.14"
